src/examples/errors/bad_expression_type_mix.del


def main() -> int {

    int a = 6+6-2*2;

    return;
}